Fix letter spacing and minor bugs

--- a/assets/scss/custom/_general.scss
+++ b/assets/scss/custom/_general.scss
@@ -49,7 +49,7 @@
       color: black;
     }
     i {
-      font-size: 3rem;
+      font-size: 2rem;
       padding-right: 3rem;
     }
   }
@@ -58,6 +58,7 @@
     p {
       font-family: 'MyriadPro-LightSemiExt';
       text-transform: uppercase;
+      letter-spacing: 0.075em;
     }
   }
 }
@@ -68,6 +69,7 @@
     font-family: 'MyriadPro-LightSemiExt';
     text-align: center;
     text-transform: uppercase;
+    letter-spacing: 0.075em;
   }
 }
 
@@ -120,8 +122,10 @@
 
 .cf-label {
   font-family: 'MyriadPro-LightSemiExt';
+  letter-spacing: 0.075em !important;
   label {
     text-transform: uppercase !important;
+    letter-spacing: 0.075em !important;
   }
 }
 
@@ -129,6 +133,20 @@
   margin: 0 auto;
 }
 
-#rev_slider_1_1_forcefullwidth, #rev_slider_1_1_wrapper,  #rev_slider_1_1 {
-  height: 650px !important;
+#rev_slider_1_1_forcefullwidth, #rev_slider_1_1_wrapper,  #rev_slider_1_1, .tp-fullwidth-forcer {
+  height: 600px !important;
+}
+
+.grid-gallery-nav a, #photographers-label {
+  border-width: 0 !important;
+  letter-spacing: 0.075em;
+  text-transform: uppercase;
+}
+
+.mc-button {
+  letter-spacing: 0.075em;
+}
+
+.hidden {
+  display: none;
 }
