--- a/assets/scss/modules/_footer.scss
+++ b/assets/scss/modules/_footer.scss
@@ -24,6 +24,7 @@
 			text-align: center;
 			font-size: 1.5rem;
 			text-transform: uppercase;
+			letter-spacing: 0.075em;
 		},
 		p {
 			font-family: 'MyriadPro-LightSemiExt';
